# creative_to_svg

./: LICENSE  README.md
CPP/: CMakeLists.txt  main.cpp  svg.hpp
CPP/module/: Line.cpp  Line.hpp  Point.cpp  Point.hpp  SetCircle.cpp  SetCircle.hpp  Vector.hpp  base.cpp  base.hpp  file_operation.cpp  file_operation.h  setLine.cpp  setLine.hpp
Python/: main.py  similar_triangle.py  similar_triangle1.py  testBaseSVG.py  testCircle.py  testLine.py  testPoint.py  testPolygon.py  testRect.py  test_circle.py  test_line.py  test_linear_gradient1.py  test_linear_gradient_pattern.py  test_linear_gradient_pattern1.py  test_linear_gradient_pattern2.py  test_linear_gradient_pattern3.py  test_point.py  test_polygon.py  test_rect.py  triangle1.py
Python/base_svg/: base_svg.py
Python/geometry/: circle.py  definition.py  gradient.py  line.py  pattern.py  point.py  polygon.py  rect.py
Python/mathematics/: vector.py
Python/test_gradient_svg/: test_linear_gradient.html
Python/test_gradient_svg/css/: main.css
Python/test_gradient_svg/script/: load_data.js
Python/test_pattern_svg/: test_linear_gradient_pattern.html
Python/test_pattern_svg/css/: main.css
Python/test_pattern_svg/script/: main.js
Python/test_rect_svg/: sample.cpp
Python/utility/: convert_str.py
Rust/draw_svg/: Cargo.toml
Rust/draw_svg/src/: file_operation.rs  lib.rs  line.rs  main.rs  point.rs  polygon.rs  rect.rs  utility.rs
